--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,6 +1,16 @@
 .header{
-background-color:#1C1427;
+/* background-color:#1C1427; */
+border: 0.2vh;
+border-color: greenyellow;
+border-style: solid;
+border-radius: 1.3vh;
+
 }
+.headertitle{
+    font-size:1.3rem!important ;
+    font-weight: 500!important;
+}
+
 .botonnav{
     background-color: greenyellow!important;
 }
@@ -10,6 +20,7 @@ a{
     font-size: 1.2rem;
     font-weight: 400!important;
     transition:all 0.7s ease!important;
+    text-align: center!important;
 }
 a:hover{
     color:red !important;;
