--- a/src/Components/MovieDetail/MovieDetail.css
+++ b/src/Components/MovieDetail/MovieDetail.css
@@ -16,3 +16,11 @@ p{
 .imgdetail{
     border-radius: 1rem
 }
+svg{
+    color: greenyellow;
+    transition:all 0.5s ease!important;
+}
+svg:hover{
+    color:red
+}
+
