--- a/src/Components/GridLatest/GridCard/GridCard.css
+++ b/src/Components/GridLatest/GridCard/GridCard.css
@@ -6,6 +6,7 @@
     /* border-color: greenyellow!important; */
     border-style: solid!important;
     border-radius: 4%!important;
+    /* box-shadow: 2px 2px 9px greenyellow; */
 
     
 }
